{
    "name": "AstralPlanes",
    "maps": [
        {
            "name": "Selection",
            "id": "c3baa163-c269-44e2-8d7b-94beef48a8da",
            "actions": [
                {
                    "name": "NextVehicle",
                    "type": "Button",
                    "id": "1abf4dc0-2f1c-4957-b433-053155dcb2f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "NextColor",
                    "type": "Button",
                    "id": "7e5987d9-6667-4b82-8c9a-ff55697ed190",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PreviousVehicle",
                    "type": "Button",
                    "id": "5b946c89-f459-4d27-acfb-76f2cd8e5c2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PreviousColor",
                    "type": "Button",
                    "id": "43297345-e770-4d26-bd90-2bc2dd9c6a75",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Choose",
                    "type": "Button",
                    "id": "af068420-8c48-4d1b-8c37-b21840a10adc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Leave",
                    "type": "Button",
                    "id": "1a63e169-d2d1-48f0-84c4-fa3199363f68",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Join",
                    "type": "Button",
                    "id": "b7a66551-1443-404e-9d84-578744d68d7b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e03850fd-876f-4d3f-83b8-679a46984a1d",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextVehicle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ce67577-bc72-4f2b-a3e6-fc1cb2d1a648",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextVehicle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e5c404d-cb5e-4457-80a8-ee6f43620c07",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousVehicle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fba10f34-db6f-4482-85ce-0663d9437e8e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousVehicle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d273e39-804a-473b-8b09-75298a288889",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": ";Generic Gamepad",
                    "action": "Choose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57676fc6-1eee-4a74-9b80-6ad3a07a214f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Switch",
                    "action": "Choose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f78123b-35e7-4b5d-b92d-b4c88cc0f3a4",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Xbox",
                    "action": "Choose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4d25a7d-3a5b-4845-b66b-bcc9d9e6d82b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Playstation",
                    "action": "Choose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cb25328-95fa-45b9-b8aa-0ab87770bb02",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Choose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba47cf2c-4c5d-4404-a4f8-97b7a0878a5f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic Gamepad",
                    "action": "Leave",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7aea1677-5795-4a2a-93a2-02deec74247a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Leave",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b40a9b2-8579-4c3f-83ed-4b72d69497e7",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic Gamepad",
                    "action": "NextColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "816ad38a-b761-45b4-91da-df4c573cf7e4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "231baeb4-2fbb-49cd-8c58-bbe835f74ff1",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic Gamepad",
                    "action": "PreviousColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b17b558-97bf-4d10-a04b-be45f9af0b37",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3af31d52-14af-446b-9579-288674dc7f8a",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Join",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Play",
            "id": "82152746-d9ff-473f-95b8-cd6d4b3eac98",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "4b62fe6d-ebdd-4a7b-af54-8013d7427e4b",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Choose",
                    "type": "Value",
                    "id": "b795f0a9-4433-499b-b3d9-c5b278c2df2f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Thrust",
                    "type": "Value",
                    "id": "f7e61601-7744-4c7c-aa2d-6e067b92a039",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "RightShoulder",
                    "type": "Button",
                    "id": "6bc629a8-25b4-4def-867b-76ecec9100a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftShoulder",
                    "type": "Button",
                    "id": "cb3c4eaf-17f7-4565-8c2c-fe83fa667a73",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "878ebd0c-b324-4c2f-b54c-96aa052bec23",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "East",
                    "type": "Button",
                    "id": "5cb2e281-da56-4061-a52c-3eb068b8b7d0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "West",
                    "type": "Button",
                    "id": "57517f6e-0d8b-40fb-a67f-7082933bab5e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "North",
                    "type": "Button",
                    "id": "dd665717-3661-4856-a2db-86fce17396e9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "South",
                    "type": "Button",
                    "id": "e0a28126-5053-402f-bf38-1b093b360724",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveMouse",
                    "type": "Value",
                    "id": "eef69fac-cc82-4337-8f3e-5ba6beca37df",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6fad67e5-0e5a-446f-a416-5f2bc7e8c380",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic Gamepad;Switch;Xbox;Playstation",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2203073d-3a96-4f34-ba87-56f934e624a6",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": ";Switch",
                    "action": "Choose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6c70858-1bae-4962-9edb-cc9793f48fbd",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Generic Gamepad;Xbox;Playstation",
                    "action": "Choose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71dff459-f855-4321-b32f-8db5498b4d79",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Choose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "226ff6af-6b3c-4d40-ac82-387a59536498",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Generic Gamepad;Switch;Xbox;Playstation",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b722273-da12-45d4-a540-7c09ce991748",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8f6f877-bf39-43fb-b51a-968bdc1ce86f",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6c5aa89-699b-4b8a-978d-2c27b0aa9409",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Generic Gamepad;Switch;Xbox;Playstation",
                    "action": "East",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c80896d5-ffd2-4618-a06a-c312b864ff7f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "East",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f168ab98-f600-45fb-969e-4cebdc34007e",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Generic Gamepad;Switch;Xbox;Playstation",
                    "action": "RightShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13d4d2f3-4920-4d05-9a90-63c6d151fe4d",
                    "path": "<Keyboard>/rightMeta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31ed0095-5d7e-4b21-ad30-362aa375195c",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Generic Gamepad;Switch;Xbox;Playstation",
                    "action": "LeftShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4f0556e-2d41-41a4-84a6-25cce686c781",
                    "path": "<Keyboard>/leftMeta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05c50c0e-3747-40d2-8540-1d7a784b701c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Generic Gamepad;Switch;Xbox;Playstation",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e677724f-7050-46a9-9f05-432183b95d45",
                    "path": "*/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "659e56cf-5b89-4d4e-aa5f-0ccbaa103653",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Playstation;Xbox;Switch;Generic Gamepad",
                    "action": "West",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d14c093-ad7d-4a19-a429-887602f501a0",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "West",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d50aa73-c1a0-4019-9816-094162d721d4",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Generic Gamepad;Switch;Xbox;Playstation",
                    "action": "North",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fc23645-2626-4f0d-8c6f-c387e3dae76b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "North",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "066021d3-f3b1-49b0-9108-530fa86c325e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Playstation;Xbox;Switch;Generic Gamepad",
                    "action": "South",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9eb0ed8-0993-4d87-aa23-f65132bf02a0",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "South",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95d896d9-5c00-4776-be5a-330086c83f0a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "MoveMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Generic Gamepad",
            "bindingGroup": "Generic Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Switch",
            "bindingGroup": "Switch",
            "devices": [
                {
                    "devicePath": "<SwitchProControllerHID>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Xbox",
            "bindingGroup": "Xbox",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Playstation",
            "bindingGroup": "Playstation",
            "devices": [
                {
                    "devicePath": "<DualShockGamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}